--- a/profileCard.html
+++ b/profileCard.html
@@ -42,7 +42,8 @@
   <div class="card">
     <img src="https://cdn2.iconfinder.com/data/icons/business-and-finance-related-hand-gestures/256/face_female_blank_user_avatar_mannequin-512.png" alt="Profile Image">
     <h2>Priti kandpal</h2>
-    <p>I am a B.Tech CSE graduate with strong skills in programming and problem-solving. <br>I’m passionate about learning new technologies and building efficient, real-world solutions</p>
+    <p>I am a B.Tech CSE graduate with strong skills in programming and problem-solving. <br>
+        I’m passionate about learning new technologies and building efficient, real-world solutions</p>
   </div>
 
 </body>
