--- a/HiringPartner.html
+++ b/HiringPartner.html
@@ -1,11 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Hiring-Partners</title>
+<style>
+  body {
+    margin: 0;
+    background: #ffffff;
+    display: flex;
+    justify-content: center;
+    padding: 40px 0;
+  }.wrapper { width: 95%; max-width: 1300px; background: #f7f9fc; padding: 40px; border-radius: 20px; }
+
+.row { display: flex; justify-content: space-between; flex-wrap: nowrap; margin-bottom: 30px; }
+
+.card { width: 120px; height: 75px; background: #ffffff; border-radius: 12px; display: flex; justify-content: center; align-items: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); padding: 10px; }
+
+.card img { max-width: 100%; max-height: 100%; object-fit: contain; transition: transform 0.3s ease, filter 0.3s ease; } .card:hover img { transform: scale(1.12); filter: brightness(1.1); } </style>
+
 </head>
-<body>
-    
-</body>
+<body><div class="wrapper">  <!-- Row 1 -->  <div class="row">
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/capgemini_31a863e94f.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/simplilearn_f8af8de923.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/pagarbook_2746958f65.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/moneytap_d5a6c9d532.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/urbanpiper_2884348a0b.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/airmeet_93e45faced.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/paytm_a5c1ce2bc6.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/bharatpe_a3a5a3f552.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/salesken_baefe048ac.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/vyapar_3f3770ebb5.svg"></div>
+  </div>  <!-- Row 2 -->  <div class="row">
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/bharatagri_d4794042fe.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/sharechat_23a9923a34.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/leapfinance_0d785d05eb.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/ola_15b5ee2b82.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/ibm_795b5429ee.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/ajio_a16cd7a85b.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/svgviewer_png_output_38_4421638b42.png"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/globallogic_c30eb641f7.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/eatfit_9dc276a187.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/smallcase_1740bcc33f.svg"></div>
+  </div>  <!-- Row 3 -->  <div class="row">
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/homelane_e9cadd0c3c.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/swiggy_bc1b88842e.svg"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/image_1600_789c48ace6.webp"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/My_Jio_For_Everything_Jio_5dd9635cab.webp"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/image_1_71234683bf.webp"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Hogarth_Studios_Screen_RGB_Black_v2_120594e944.png"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/image_1606_531a7683d1.webp"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Rectangle_22689_b09029d4ae.webp"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/image_1583_d3e798921d.webp"></div>
+    <div class="card"><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/dream11_d6c8d97a52.svg"></div>
+  </div></div></body>
 </html>
