--- a/MasaiCalculator.html
+++ b/MasaiCalculator.html
@@ -32,7 +32,7 @@
     border: none;
   }
   .op { background: black; color: white; }
-  .clear { background: red; color: white; }
+  .clear { background: red; color: #ccc }
 </style>
 </head>
 <body>
